k8s/ingress/argo-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-server
  namespace: production
spec:
  type: ExternalName
  externalName: argo-cd-argocd-server.argo.svc.cluster.local
  ports:
    - port: 80
      # no targetPort needed (defaults to 80, which maps to the argo svc’s 80→pod:8080)
