k8s/ingress/jenkins-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: production
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
