k8s/ingress/all-ns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-ns-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # 1) API → backend
          - path: /api/sp500
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001

          # 2) /jenkins → Jenkins
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080

          # 3) /argo → ArgoCD (now mounted under /argo by Helm args)
          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80

          # 4) / → frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
